# FEMMA

./: README.md
.github/workflows/: cmake-multi-platform.yml
FEM/: cols_index.m  combineGrad.m  dfdphi.m  dofIndex.m  eleMatrix_bloch.m  eleMatrix_hermite.m  eleMatrix_linear.m  eleMatrix_quad.m  ensembleSpin.m  femMMA.m  femSolve.m  fidelityCheck.m  globalStiff.m  grumbleMMA.m  helmSolve.m  meshFEM.m  mmaInit.m  mmaSpinach.m  operatorCreate.m  powerConstr.m  randWave.m  sigmoid.m  spinSolve_phase.m  spinSolve_xy.m  stateCreate.m  stiffIndex.m  variablesFEM.m
FEMMA-cpp/: .gitignore  .gitkeep  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  add_spdx.m
FEMMA-cpp/.github/workflows/: ci.yml
FEMMA-cpp/examples/: bloch_excitation.cpp  element_orders.cpp  ex_femma2.cpp  lvn_phase.cpp
FEMMA-cpp/include/femma/: bloch.hpp  control.hpp  ele_matrix.hpp  ensemble.hpp  fem_mesh.hpp  femsolve.hpp  global_stiff.hpp  helm_solve.hpp  mma.hpp  operator_create.hpp  optimise.hpp  shape_export.hpp  spin_solve.hpp  spin_types.hpp  state_create.hpp
FEMMA-cpp/src/core/: bloch.cpp  bloch_solve_phase.cpp  combine_grad.cpp  ele_matrix_grad_hermite.cpp  ele_matrix_grad_linear.cpp  ele_matrix_grad_quad.cpp  ele_matrix_hermite.cpp  ele_matrix_linear.cpp  ele_matrix_quad.cpp  ensemble_spin.cpp  fem_mma.cpp  femsolve.cpp  global_stiff.cpp  helm_matrix.cpp  helm_solve.cpp  mesh_fem.cpp  mma_init_phase.cpp  mma_init_xy.cpp  operator_create.cpp  power_constr.cpp  sigmoid.cpp  spin_solve_phase.cpp  spin_solve_xy.cpp  state_create.cpp
FEMMA-cpp/src/mma/: README.md  asymp.cpp  concheck.cpp  gcmmasub.cpp  kktcheck.cpp  mmasub.cpp  raaupdate.cpp  subsolv.cpp
FEMMA-cpp/test optimization/: EX_femma2.m  controlFromShape.m  fidelity_check_femma.m  parseShape.m
FEMMA-cpp/tests/: test_assembly.cpp  test_bloch.cpp  test_bloch_xy_grad.cpp  test_ensemble.cpp  test_gcmma.cpp  test_gradient.cpp  test_helm.cpp  test_hermite.cpp  test_mma.cpp  test_operators.cpp  test_optimise.cpp  test_optimise_bloch.cpp  test_optimise_hermite.cpp  test_optimise_quad.cpp  test_optimise_xy.cpp  test_quad.cpp  test_solve.cpp  test_spinsolve.cpp  test_spinsolve_xy.cpp
FEMMA-cpp/tools/: bl_xval.cpp  bv_iter1.cpp  bv_traj.cpp  bv_wave.cpp  dump_case.cpp  dump_spinsolve.cpp
examples/: EX_femma.m  UR_auxmat.m
lib/Spinach_modified/: ctrl_trajan.m  ensemble.m  finiteDiff.m  finiteDiff_approx.m  fminnewton.m  generator_trap.m  grape_approx.m  grape_gate.m  grape_hilb.m  grape_hilb_hessian.m  objeval.m  optimcon.m  step_approx.m
